# gl-research-toolkit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  clear-imported-assets.sh  pack.py  update-cmake.sh
gl-research-toolkit/: CMakeLists.txt  files.cmake
gl-research-toolkit/core/: CMakeLists.txt  files.cmake  update-cmake.sh
gl-research-toolkit/core/include/glrt/: dependencies.h
gl-research-toolkit/core/include/glrt/toolkit/: array-bucket-traits.h  array.h  array.inl  assimp-glm-converter.h  bit-magic.h  bit-magic.inl  concatenated-less-than.h  concatenated-less-than.inl  dependency-set.h  dependency-set.inl  escape-string.h  fragmented-array.h  fragmented-array.inl  geometry.h  json.h  linked-tuple.h  logger.h  memory.cpp  memory.h  network.h  plain-old-data-stream.h  podarray.h  podarray.inl  profiler.h  recursive-dir-entry-info-list.h  tcp-messages.h  uuid.h  uuid.inl  variable-with-callback.h  variable-with-callback.inl  zindex.h
gl-research-toolkit/core/src/glrt/: dependencies.cpp
gl-research-toolkit/core/src/glrt/toolkit/: escape-string.cpp  logger.cpp  network.cpp  plain-old-data-stream.cpp  profiler.cpp  recursive-dir-entry-info-list.cpp  tcp-messages.cpp  uuid.cpp  zindex.cpp
gl-research-toolkit/include/glrt/: application.h  debug-camera.h  debug-gui.h  dependencies.h  profiler.h  system.h  temp-shader-file.h  window.h
gl-research-toolkit/include/glrt/debugging/: debug-line-visualisation.h  debug-mesh.h  draw-cameras.h  shader-debug-printer.h  visualization-renderer.h
gl-research-toolkit/include/glrt/gui/: anttweakbar.h  properties.h  toolbar.h
gl-research-toolkit/include/glrt/scene/: camera-component.h  camera-parameter.h  entity.h  forward-renderer.h  light-component.h  material.h  scene-renderer.h  scene.h  static-mesh-component.h  static-mesh.h
gl-research-toolkit/include/glrt/shader/: shader-cache.h  shader-factory.h  shader-technique.h  shader.h
gl-research-toolkit/include/glrt/toolkit/: aligned-vector.h  antifreeze.h  geometry.h  json.h  logger.h  reloadable-shader.h  shader-compiler.h  shader-storage-format.h  temp-shader-file.h
gl-research-toolkit/renderer/: CMakeLists.txt  files.cmake
gl-research-toolkit/renderer/include/glrt/: application.h  debug-camera.h  profiler.h  sample-application.h  splashscreen-style.h  system.h
gl-research-toolkit/renderer/include/glrt/debugging/: debug-line-visualisation.h  shader-debug-printer.h
gl-research-toolkit/renderer/include/glrt/gui/: anttweakbar.h  toolbar.h
gl-research-toolkit/renderer/include/glrt/renderer/: application.h  bvh-usage.h  compute-step.h  declarations.h  deferred-renderer.h  dependencies.h  forward-renderer.h  gl-texture-manager.h  light-buffer.h  managed-shader.cpp  managed-shader.h  material-buffer.h  material-shader.h  material-state.h  material.h  sample-resource-manager.h  sample-source-manager.h  scene-renderer.h  shadermanager.h  simple-shader-storage-buffer.h  simple-shader-storage-buffer.inl  static-mesh-buffer-manager.cpp  static-mesh-buffer-manager.h  static-mesh-buffer.h  static-mesh-renderer.h  static-mesh-renderer.inl  static-mesh.h  synced-fragmented-component-array.h  synced-fragmented-component-array.inl  system.h  transformation-buffer.h  voxel-buffer.cpp  voxel-buffer.h  voxelized-scene.h
gl-research-toolkit/renderer/include/glrt/scene/: forward-renderer.h  material.h  scene-renderer.h
gl-research-toolkit/renderer/include/glrt/toolkit/: shader-storage-format.h  splashscreen-style.h
gl-research-toolkit/renderer/src/glrt/: application.cpp  dependencies.cpp  logger.cpp  profiler.cpp  splashscreen-style.cpp  system.cpp
gl-research-toolkit/renderer/src/glrt/debugging/: debug-line-visualisation.cpp  shader-debug-printer.cpp
gl-research-toolkit/renderer/src/glrt/gui/: anttweakbar.cpp  toolbar.cpp
gl-research-toolkit/renderer/src/glrt/renderer/: bvh-usage.cpp  (+26 more)
gl-research-toolkit/scene/: CMakeLists.txt  files.cmake
gl-research-toolkit/src/: application.cpp  debug-gui.cpp  dependencies.cpp  system.cpp  window.cpp
gl-research-toolkit/src/glrt/: application.cpp  debug-camera.cpp  debug-gui.cpp  dependencies.cpp  profiler.cpp  splashscreen.cpp  system.cpp  temp-shader-file.cpp
gl-research-toolkit/src/glrt/debugging/: debug-line-visualisation.cpp  debug-mesh.cpp  draw-cameras.cpp  shader-debug-printer.cpp  visualization-renderer.cpp
gl-research-toolkit/src/glrt/gui/: anttweakbar.cpp  properties.cpp  toolbar.cpp
gl-research-toolkit/src/glrt/scene/: camera-parameter.cpp  entity.cpp  forward-renderer.cpp  light-component.cpp  material.cpp  scene-renderer.cpp  scene.cpp  static-mesh-component.cpp  static-mesh.cpp
gl-research-toolkit/src/glrt/shader/: shader-cache.cpp  shader-factory.cpp  shader-technique.cpp  shader.cpp
gl-research-toolkit/src/glrt/toolkit/: antifreeze.cpp  geometry.cpp  json.cpp  logger.cpp  reloadable-shader.cpp  shader-compiler.cpp  splashscreen-style.cpp
tests/: CMakeLists.txt  bit-magic.cpp  files.cmake  main.cpp
tests/angelscript-ref/: CMakeLists.txt  common.h  main.cpp  ref-access-functions.cpp
tests/angelscript-ref/scripts/: graph.as
tests/arrays/: CMakeLists.txt  arrays-tests.cpp  fragmented-array.cpp  fragmented-array.test.cpp  main.cpp  statespy.cpp  statespy.h  trait-handling.cpp
tests/coord-frame/: CMakeLists.txt  coord-frame.cpp  main.cpp
tests/qt-tests/: auto-disconnect-with-deletion.cpp  auto-disconnect-with-deletion.h
tests/shader-includes/: CMakeLists.txt  main.cpp  shader-includes.cpp
tests/shader-includes/shader/: same-dir.glsl  test-shader.fs
tests/shader-includes/shader/global/: factor.glsl
tests/shader-includes/shader/sub-dir/: sub-dir.glsl
tests/shader-library/: CMakeLists.txt  bvh.cpp  main.cpp  shader-library.cpp
tests/testing-framework/: CMakeLists.txt  testing-application.cpp  testing-application.h  testing-framework.h
tools/profiler/: CMakeLists.txt  connection-widget.cpp  connection-widget.h  connection-widget.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp
tools/shader-compiler/: CMakeLists.txt  compiler.cpp  compiler.h  debugmessage.cpp  debugmessage.h  main.cpp
(+324 files in other folders)
